Attempt to fix horizontal-scrollbar extending into the sidebar

--- a/react/src/index.css
+++ b/react/src/index.css
@@ -143,7 +143,8 @@ h2 {
 
 .page-layout {
     display: flex;
-    width: auto;
+    width: calc(100vw - 12em);
+    margin-left: 12em;
     overflow-x: auto;
 }
 
